k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedding-invitation-frontend
  namespace: wedding-invitation
  labels:
    app: wedding-invitation-frontend
spec:
  type: ClusterIP
  selector:
    app: wedding-invitation-frontend
  ports:
    - port: 80
      targetPort: 4006
      protocol: TCP
      name: http
